[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.2",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "stable-baselines3>=2.7.0",
]
